==> FASTSHIFT/Arduino-For-Keil/_Keilduino (STM32F0xx)/Libraries/SD/utility/Sd2Card.cpp <==
#include "Sd2Card.h"
#define SDCARD_SPI SPI
#include "FileGroup.h"

void Sd2Card::chipSelectHigh(void)
{
  digitalWrite(chipSelectPin_, HIGH);
  if (chip_select_asserted)
	{
    chip_select_asserted = 0;
    SDCARD_SPI.endTransaction();
  }
}

void Sd2Card::chipSelectLow(void)
{
  if (!chip_select_asserted)
	{
    chip_select_asserted = 1;
    //SDCARD_SPI.beginTransaction();
  }
  digitalWrite(chipSelectPin_, LOW);
}

uint8_t Sd2Card::init(uint8_t sckRateID, int chipSelectPin)
{
  errorCode_ = inBlock_ = partialBlockRead_ = type_ = 0;
  chipSelectPin_ = chipSelectPin;
  // 16-bit init start time allows over a minute
  uint16_t t0 = (uint16_t)millis();
  uint32_t arg;

  // set pin modes
  pinMode(chipSelectPin_, OUTPUT);
  digitalWrite(chipSelectPin_, HIGH);

  SDCARD_SPI.begin();
  //SDCARD_SPI.Settings(250000, MSBFIRST, SPI_MODE0);//********************************************

  // must supply min of 74 clock cycles with CS high.

  //SDCARD_SPI.beginTransaction();//********************************************
  
	for (uint8_t i = 0; i < 10; i++) spiSend(0XFF);
	
  SDCARD_SPI.endTransaction();//********************************************

  chipSelectLow();

  // command to go idle in SPI mode
  while ((status_ = cardCommand(CMD0, 0)) != R1_IDLE_STATE)
	{
    if (((uint16_t)(millis() - t0)) > SD_INIT_TIMEOUT)
		{
      error(SD_CARD_ERROR_CMD0);
      goto fail;
    }
  }
  // check SD version
  if ((cardCommand(CMD8, 0x1AA) & R1_ILLEGAL_COMMAND))
	{
    type(SD_CARD_TYPE_SD1);
  } 
	else
	{
    // only need last byte of r7 response
    for (uint8_t i = 0; i < 4; i++) status_ = spiRec();
    if (status_ != 0XAA)
		{
      error(SD_CARD_ERROR_CMD8);
      goto fail;
    }
    type(SD_CARD_TYPE_SD2);
  }
  // initialize card and send host supports SDHC if SD2
  arg = type() == SD_CARD_TYPE_SD2 ? 0X40000000 : 0;

  while ((status_ = cardAcmd(ACMD41, arg)) != R1_READY_STATE)
	{
    // check for timeout
    if (((uint16_t)(millis() - t0)) > SD_INIT_TIMEOUT)
		{
      error(SD_CARD_ERROR_ACMD41);
      goto fail;
    }
  }
  // if SD2 read OCR register to check for SDHC card
  if (type() == SD_CARD_TYPE_SD2)
	{
    if (cardCommand(CMD58, 0))
		{
      error(SD_CARD_ERROR_CMD58);
      goto fail;
    }
    if ((spiRec() & 0XC0) == 0XC0) type(SD_CARD_TYPE_SDHC);
    // discard rest of ocr - contains allowed voltage range
    for (uint8_t i = 0; i < 3; i++) spiRec();
  }
  chipSelectHigh();

  return setSckRate(sckRateID);

 fail:
  chipSelectHigh();
  return false;
}
